projects/amiya.akn/src/infrastructure/kubernetes/envoy-gateway/default.gateway.yaml
# The amiya.akn project requires a dedicated listener for the *.amiya.akn.chezmoi.sh domain
# to handle HTTPS traffic for amiya.akn specific services.
# This configuration extends the default Gateway with an additional listener
# and updates the certificate to include the amiya.akn domain.
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-default
spec:
  gatewayClassName: envoy-gateway
  listeners:
    - name: web
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: chezmoi.sh-websecure
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: wildcard.chezmoi.sh-certificate
